--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://<gabrieldegodoy>.github.io/<dogs>",
+  "homepage": "https://gabrieldegodoy.github.io/dogs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
